WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91054
[BlackBerry] Cannot use digest proxy auth and NTLM auth at the same time
https://bugs.webkit.org/show_bug.cgi?id=91054
Summary
[BlackBerry] Cannot use digest proxy auth and NTLM auth at the same time
Jonathan Dong
Reported
2012-07-12 00:55:56 PDT
RIM PR: 160857 Way to reproduce: Set up a proxy server that accepts Basic or Digest auth. Set your wifi on the device to use this server, but DO NOT enter a username/password. (So the browser will open a login dialog to get the username and password.) Open the browser and try to connect to a site that uses NTLM auth. expected: authentication dialog pops up for the proxy credential, after entering the correct credential, the authentication dialog pops up again for the NTLM http authentication challenge. now: the proxy auth dialog pops up again after the NTLM auth dialog for the proxy credential, after we provide the right credential the NTLM auth challenge dialog pops up again and the loop continues.
Attachments
Patch
(6.36 KB, patch)
2012-07-12 01:10 PDT
,
Jonathan Dong
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jonathan Dong
Comment 1
2012-07-12 01:10:49 PDT
Created
attachment 151880
[details]
Patch
WebKit Review Bot
Comment 2
2012-07-12 04:18:22 PDT
Comment on
attachment 151880
[details]
Patch Clearing flags on attachment: 151880 Committed
r122444
: <
http://trac.webkit.org/changeset/122444
>
WebKit Review Bot
Comment 3
2012-07-12 04:18:27 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug