[BlackBerry] Cannot use digest proxy auth and NTLM auth at the same time https://bugs.webkit.org/show_bug.cgi?id=91054

Patch by Jonathan Dong <jonathan.dong@torchmobile.com.cn> on 2012-07-12
Reviewed by George Staikos.

Source/WebCore:

Added an interface function syncProxyCredential() in class
PageClientBlackBerry, which is responsible to notify WebPageClient
to synchronize proxy credential to the chrome process.

Internally reviewed by Jason Liu <jason.liu@torchmobile.com.cn>

No new tests since there's no functional change.

* platform/blackberry/PageClientBlackBerry.h:
* platform/network/blackberry/NetworkJob.cpp:
(WebCore::NetworkJob::storeCredentials): Remember the accepted proxy
credential and notify webpage client to synchronize it.

Source/WebKit/blackberry:

Implemented interface function syncProxyCredential() derived
from class PageClientBlackBerry.

Internally reviewed by Jason Liu <jason.liu@torchmobile.com.cn>

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::syncProxyCredential):
(WebKit):
* Api/WebPageClient.h:
* Api/WebPage_p.h:
(WebPagePrivate):

Canonical link: https://commits.webkit.org/108919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122444 268f45cc-cd09-0410-ab3c-d52691b4dbfc